<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp"
    android:layout_margin="8dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.mahmoud.elm.modules.core.presentation.custom_view.IncidentStatusView
            android:id="@+id/view_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:item_label="@string/label_id" />

        <com.mahmoud.elm.modules.core.presentation.custom_view.IncidentStatusView
            android:id="@+id/view_lat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:item_label="@string/label_lat" />

        <com.mahmoud.elm.modules.core.presentation.custom_view.IncidentStatusView
            android:id="@+id/view_lon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:item_label="@string/label_lon" />

        <com.mahmoud.elm.modules.core.presentation.custom_view.IncidentStatusView
            android:id="@+id/view_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:item_label="@string/label_description" />

        <com.mahmoud.elm.modules.core.presentation.custom_view.IncidentStatusView
            android:id="@+id/view_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:item_label="@string/label_status" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>
