<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey">

    <include
        android:id="@+id/layout_back_bar"
        layout="@layout/layout_back_bar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_back_bar">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_description"
                style="@style/StyleSignInWithEmailEditText"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:hint="@string/label_description"
                android:inputType="text"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_latitude"
                style="@style/StyleSignInWithEmailEditText"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:hint="@string/label_lat"
                android:inputType="text"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_longitude"
                style="@style/StyleSignInWithEmailEditText"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:hint="@string/label_lon"
                android:inputType="text"
                android:maxLines="1" />

            <com.mahmoud.elm.core.extentions.ProgressButton
                android:id="@+id/btn_submit"
                android:layout_width="91.5dp"
                android:layout_height="38dp"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"

                app:text="@string/label_submit" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>