<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".modules.incidents.list.presentation.view.IncidentsListActivity">

    <include
        android:id="@+id/layout_back_bar"
        layout="@layout/layout_back_bar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_back_bar">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/StylePageSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_filter_by"
                android:layout_marginHorizontal="15dp"

                android:textAlignment="viewStart" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btn_date"
                    style="@style/PrimaryButton"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:text="@string/label_filter_by_date"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btn_status"
                    style="@style/SecondaryButton"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:text="@string/label_filter_by_status"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_submit_incident"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/dashed_border"
                android:gravity="center"
                android:text="@string/label_submit_new_incident"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:layout_marginTop="15dp" />


            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:layout_marginHorizontal="7dp"
                >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_incidents"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:overScrollMode="never"
                    android:paddingBottom="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="10"
                    tools:listitem="@layout/layout_incidents_item" />

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

    <com.mahmoud.elm.core.custom_view.StateViewLayout
        android:id="@+id/layout_state_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_back_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>